# project-folder-structure-template

./: README.md
python/project-name/: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
python/project-name/config/: config.yaml
python/project-name/src/: __init__.py
python/project-name/src/utils/: config.py  logging.py
python/project-name/tests/: conftest.py
r/project-name/: DESCRIPTION  Makefile  README.md
r/project-name/R/: data_cleaning.R  data_ingestion.R  model_evaluation.R  utils.R
r/project-name/config/: config.yaml
r/project-name/notebooks/: 01-data-exploration.Rmd  02-data-cleaning.Rmd  04-modeling.Rmd
r/project-name/tests/testthat/: test-data-processing.R
